k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-news
  namespace: weather-news
spec:
  type: ClusterIP
  selector:
    app: weather-news
  ports:
    - port: 8501
      targetPort: 8501
